--- a/commentsdep/requirements.txt
+++ b/commentsdep/requirements.txt
@@ -10,10 +10,10 @@ decorator==4.4.2
 distlib==0.3.0
 distro==1.4.0
 Django==3.1.6
+gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
-ipython==7.20.0
 ipython-genutils==0.2.0
 jedi==0.18.0
 lockfile==0.12.2
@@ -36,7 +36,7 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 sqlparse==0.4.1
-traitlets==5.0.5
 urllib3==1.25.8
 wcwidth==0.2.5
 webencodings==0.5.1
+whitenoise==5.2.0
