--- a/commentsdep/requirements.txt
+++ b/commentsdep/requirements.txt
@@ -9,11 +9,14 @@ contextlib2==0.6.0
 decorator==4.4.2
 distlib==0.3.0
 distro==1.4.0
+dj-database-url==0.5.0
 Django==3.1.6
+django-heroku==0.3.1
 gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
 ipaddr==2.2.0
+ipython==7.20.0
 ipython-genutils==0.2.0
 jedi==0.18.0
 lockfile==0.12.2
@@ -26,6 +29,8 @@ pickleshare==0.7.5
 Pillow==8.1.2
 progress==1.5
 prompt-toolkit==3.0.16
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 ptyprocess==0.7.0
 Pygments==2.8.0
 pyparsing==2.4.6
@@ -36,6 +41,7 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 sqlparse==0.4.1
+traitlets==5.0.5
 urllib3==1.25.8
 wcwidth==0.2.5
 webencodings==0.5.1
